--- a/index.html
+++ b/index.html
@@ -9,19 +9,135 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<!-- CSS -->
-<link rel="stylesheet" href="style.css">
+<style>
+/* ===== GLOBAL ===== */
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:'Poppins',sans-serif;
+  background:#000;
+  color:#eee;
+  scroll-behavior:smooth;
+}
+a{color:inherit;text-decoration:none}
+.container{width:90%;max-width:1100px;margin:auto}
+.section{padding:60px 0}
+.section-title{color:#ff4d4d;text-align:center;font-size:2rem;margin-bottom:30px}
+
+/* ===== HEADER ===== */
+header{
+  background:#000;
+  position:fixed;
+  width:100%;
+  top:0;
+  left:0;
+  z-index:100;
+  border-bottom:1px solid #222;
+}
+.nav-container{display:flex;justify-content:space-between;align-items:center;padding:20px 0}
+.logo{color:#ff4d4d;font-weight:600;font-size:1.3rem}
+.nav-links{list-style:none;display:flex;gap:25px}
+.nav-links a:hover{color:#ff4d4d}
+
+/* ===== HERO ===== */
+.hero{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  min-height:100vh;
+  background:#000;
+  padding-top:90px; /* header space */
+}
+.hero-content{
+  display:flex;
+  flex-wrap:wrap;
+  align-items:center;
+  gap:40px;
+}
+.hero-left{
+  flex:1 1 300px;
+  display:flex;
+  justify-content:center;
+}
+.profile{
+  width:280px;
+  height:280px;
+  border-radius:50%;
+  border:5px solid #ff4d4d;
+  object-fit:cover;
+  opacity:0;
+  transform:translateX(-40px);
+  animation:slideIn 1s ease forwards; /* fast load */
+}
+.hero-right{
+  flex:1 1 300px;
+  opacity:0;
+  transform:translateX(40px);
+  animation:slideInRight 1s ease forwards;
+  animation-delay:0.2s;
+}
+@keyframes slideIn{
+  to{opacity:1;transform:translateX(0);}
+}
+@keyframes slideInRight{
+  to{opacity:1;transform:translateX(0);}
+}
+.hero-right h2{
+  font-size:2.2rem;
+  margin-bottom:10px;
+}
+.hero-right h2 span{color:#ff4d4d}
+.tagline{font-weight:500;margin-bottom:15px;color:#bbb}
+.intro{line-height:1.7;margin-bottom:25px;color:#ddd}
+.social-icons{display:flex;gap:20px;margin-bottom:25px}
+.social-icons a{
+  font-size:1.8rem;
+  color:#ff4d4d;
+  transition:.3s;
+}
+.social-icons a:hover{color:#fff}
+.btn{
+  display:inline-block;
+  padding:12px 25px;
+  background:#ff4d4d;
+  color:#fff;
+  border-radius:6px;
+  font-weight:600;
+  transition:.3s;
+}
+.btn:hover{background:#e03a3a}
+
+/* ===== SKILLS, PROJECTS, etc. ===== */
+.grid{
+  list-style:none;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+  text-align:center;
+}
+.card{
+  background:#111;
+  padding:20px;
+  border-radius:10px;
+  border:1px solid #222;
+  transition:.3s;
+}
+.card:hover{border-color:#ff4d4d}
+footer{
+  text-align:center;
+  padding:20px 0;
+  background:#111;
+  margin-top:40px;
+}
+</style>
 </head>
 <body>
 
 <!-- ===== HEADER ===== -->
 <header>
   <div class="container nav-container">
-    <div class="logo-box">
-      <h1 class="logo">K. V. Raghul</h1>
-    </div>
+    <div class="logo">K. V. Raghul</div>
     <nav>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -29,7 +145,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#certifications">Certifications</a></li>
-        <li><a href="#resume">Resume</a></li>
+        <li><a href="resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -39,40 +155,29 @@
 <!-- ===== HERO ===== -->
 <section id="about" class="hero section">
   <div class="container hero-content">
-    <!-- ✅ Removed fade-item so it animates on load, not scroll -->
     <div class="hero-left">
       <img src="myphoto.jpeg" alt="Profile photo" class="profile">
     </div>
     <div class="hero-right">
-      <h2>Hi! I'm <span class="accent">Raghul</span></h2>
+      <h2>Hi! I'm <span>Raghul</span></h2>
       <p class="tagline">Data Analytics & Cybersecurity Enthusiast</p>
       <p class="intro">
-        I'm passionate about uncovering insights from data and exploring secure
-        digital solutions. My interests span <strong>data analytics</strong>,
-        <strong>cybersecurity</strong>, and emerging technologies that shape
-        the future of computing.
+        I'm passionate about uncovering insights from data and exploring secure digital solutions. 
+        My interests span <strong>data analytics</strong>, <strong>cybersecurity</strong>, and emerging technologies 
+        that shape the future of computing.
       </p>
-
-      <!-- Social Icons -->
       <div class="social-icons">
-        <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/Raghul-07-tech" target="_blank" aria-label="GitHub">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="mailto:krishnamoorthiraghul123@gmail.com" aria-label="Email">
-          <i class="fas fa-envelope"></i>
-        </a>
+        <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Raghul-07-tech" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="mailto:krishnamoorthiraghul123@gmail.com"><i class="fas fa-envelope"></i></a>
       </div>
-
       <a href="#projects" class="btn">View My Work</a>
     </div>
   </div>
 </section>
 
 <!-- ===== SKILLS ===== -->
-<section id="skills" class="section fade-item">
+<section id="skills" class="section">
   <div class="container">
     <h2 class="section-title">Skills</h2>
     <ul class="grid">
@@ -88,28 +193,19 @@
 </section>
 
 <!-- ===== PROJECTS ===== -->
-<section id="projects" class="section alt fade-item">
+<section id="projects" class="section">
   <div class="container">
     <h2 class="section-title">Projects</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>HEALTHSYNC (2025)</h3>
-        <p>Cloud-based patient record management using Flask & Google Cloud.</p>
-      </div>
-      <div class="card">
-        <h3>5G User Session Management (2025)</h3>
-        <p>Automated UE/gNB session control using Flask backend and nr-cli commands.</p>
-      </div>
-      <div class="card">
-        <h3>Borewell Rescue System (2023)</h3>
-        <p>Balloon-assisted mechanism to safely extract children from borewells.</p>
-      </div>
+    <div class="grid">
+      <div class="card"><h3>HEALTHSYNC (2025)</h3><p>Cloud-based patient record management using Flask & Google Cloud.</p></div>
+      <div class="card"><h3>5G User Session Management (2025)</h3><p>Automated UE/gNB session control using Flask backend and nr-cli commands.</p></div>
+      <div class="card"><h3>Borewell Rescue System (2023)</h3><p>Balloon-assisted mechanism to safely extract children from borewells.</p></div>
     </div>
   </div>
 </section>
 
 <!-- ===== EDUCATION ===== -->
-<section id="education" class="section fade-item">
+<section id="education" class="section">
   <div class="container">
     <h2 class="section-title">Education</h2>
     <p><strong>B.E. Computer Science & Engineering</strong> – Prince Shri Venkateshwara Padmavathy Engineering College, CGPA 8.21 (6th Sem)</p>
@@ -118,7 +214,7 @@
 </section>
 
 <!-- ===== CERTIFICATIONS ===== -->
-<section id="certifications" class="section alt fade-item">
+<section id="certifications" class="section">
   <div class="container">
     <h2 class="section-title">Certifications</h2>
     <ul>
@@ -130,67 +226,18 @@
   </div>
 </section>
 
-<!-- ===== RESUME ===== -->
-<section id="resume" class="section alt fade-item">
-  <div class="container">
-    <h2 class="section-title">Resume</h2>
-    <p>You can view or download my detailed resume below:</p>
-    <a href="KVRaghul_Resume.pdf" target="_blank" class="btn">View / Download Resume</a>
-  </div>
-</section>
-
 <!-- ===== CONTACT ===== -->
-<section id="contact" class="section fade-item">
+<section id="contact" class="section">
   <div class="container">
     <h2 class="section-title">Contact</h2>
-    <div class="contact-icons">
-      <a href="mailto:krishnamoorthiraghul123@gmail.com" aria-label="Email">
-        <i class="fas fa-envelope"></i> Email Me
-      </a>
-      <a href="tel:+918838168911" aria-label="Phone">
-        <i class="fas fa-phone"></i> +91-8838168911
-      </a>
-    </div>
+    <p>Email: <a href="mailto:krishnamoorthiraghul123@gmail.com">krishnamoorthiraghul123@gmail.com</a></p>
+    <p>Phone: +91-8838168911</p>
   </div>
 </section>
 
 <footer>
-  <p>© 2025 K. V. Raghul | Built with HTML, CSS & JavaScript</p>
+  <p>© 2025 K. V. Raghul | Built with HTML & CSS</p>
 </footer>
-
-<!-- ===== GSAP ===== -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<script>
-  // ✅ Animate hero photo & text immediately on page load
-  gsap.from(".hero-left", {
-    duration: 1.0,
-    x: -60,
-    opacity: 0,
-    ease: "power3.out"
-  });
-  gsap.from(".hero-right", {
-    duration: 1.0,
-    x: 60,
-    opacity: 0,
-    ease: "power3.out"
-  });
-
-  // Fade in other sections on scroll
-  const fadeItems = document.querySelectorAll(".fade-item");
-  fadeItems.forEach(item => gsap.set(item, {opacity: 0, y: 40}));
-
-  const revealOnScroll = () => {
-    fadeItems.forEach(item => {
-      const rect = item.getBoundingClientRect();
-      if (rect.top < window.innerHeight - 100 && !item.classList.contains("shown")) {
-        item.classList.add("shown");
-        gsap.to(item, {opacity: 1, y: 0, duration: 0.8, ease: "power2.out"});
-      }
-    });
-  };
-  window.addEventListener("scroll", revealOnScroll);
-  revealOnScroll(); // run once on load
-</script>
 
 </body>
 </html>
