--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ header{
   object-fit:cover;
   opacity:0;
   transform:translateX(-40px);
-  animation:slideIn 1s ease forwards; /* fast load */
+  animation:slideIn 1s ease forwards;
 }
 .hero-right{
   flex:1 1 300px;
@@ -77,25 +77,14 @@ header{
   animation:slideInRight 1s ease forwards;
   animation-delay:0.2s;
 }
-@keyframes slideIn{
-  to{opacity:1;transform:translateX(0);}
-}
-@keyframes slideInRight{
-  to{opacity:1;transform:translateX(0);}
-}
-.hero-right h2{
-  font-size:2.2rem;
-  margin-bottom:10px;
-}
+@keyframes slideIn{to{opacity:1;transform:translateX(0);}}
+@keyframes slideInRight{to{opacity:1;transform:translateX(0);}}
+.hero-right h2{font-size:2.2rem;margin-bottom:10px;}
 .hero-right h2 span{color:#ff4d4d}
 .tagline{font-weight:500;margin-bottom:15px;color:#bbb}
 .intro{line-height:1.7;margin-bottom:25px;color:#ddd}
 .social-icons{display:flex;gap:20px;margin-bottom:25px}
-.social-icons a{
-  font-size:1.8rem;
-  color:#ff4d4d;
-  transition:.3s;
-}
+.social-icons a{font-size:1.8rem;color:#ff4d4d;transition:.3s;}
 .social-icons a:hover{color:#fff}
 .btn{
   display:inline-block;
@@ -108,11 +97,11 @@ header{
 }
 .btn:hover{background:#e03a3a}
 
-/* ===== SKILLS, PROJECTS, etc. ===== */
+/* ===== SECTIONS ===== */
 .grid{
   list-style:none;
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
   gap:20px;
   text-align:center;
 }
@@ -124,12 +113,7 @@ header{
   transition:.3s;
 }
 .card:hover{border-color:#ff4d4d}
-footer{
-  text-align:center;
-  padding:20px 0;
-  background:#111;
-  margin-top:40px;
-}
+footer{text-align:center;padding:20px 0;background:#111;margin-top:40px}
 </style>
 </head>
 <body>
@@ -143,8 +127,10 @@ footer{
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#internships">Internships</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#certifications">Certifications</a></li>
+        <li><a href="#achievements">Achievements</a></li>
         <li><a href="resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -162,16 +148,18 @@ footer{
       <h2>Hi! I'm <span>Raghul</span></h2>
       <p class="tagline">Data Analytics & Cybersecurity Enthusiast</p>
       <p class="intro">
-        I'm passionate about uncovering insights from data and exploring secure digital solutions. 
-        My interests span <strong>data analytics</strong>, <strong>cybersecurity</strong>, and emerging technologies 
-        that shape the future of computing.
+        Aspiring <strong>Data Analyst</strong> with hands-on skills in <strong>Python</strong>, 
+        <strong>SQL</strong>, and <strong>Power BI</strong>. Passionate about 
+        <strong>data visualization</strong>, <strong>machine learning</strong>, 
+        and <strong>cybersecurity</strong> while exploring cutting-edge 
+        domains like <strong>5G networks</strong> and <strong>cloud computing</strong>.
       </p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/Raghul-07-tech" target="_blank"><i class="fab fa-github"></i></a>
         <a href="mailto:krishnamoorthiraghul123@gmail.com"><i class="fas fa-envelope"></i></a>
       </div>
-      <a href="#projects" class="btn">View My Work</a>
+      <a href="resume.pdf" target="_blank" class="btn">Download Resume</a>
     </div>
   </div>
 </section>
@@ -182,12 +170,12 @@ footer{
     <h2 class="section-title">Skills</h2>
     <ul class="grid">
       <li>Python, Java, C, C++, SQL</li>
-      <li>Power BI, Data Visualization</li>
-      <li>Machine Learning (Basics)</li>
+      <li>Power BI, Data Visualization, Data Cleaning</li>
+      <li>Machine Learning (Basics), Deep Learning (Basics)</li>
       <li>Cloud (AWS, GCP)</li>
-      <li>Flask, OpenCV</li>
-      <li>5G Network Simulation</li>
+      <li>Flask, OpenCV, VMware, Kali Linux</li>
       <li>Cybersecurity & Ethical Hacking</li>
+      <li>5G Network Simulation</li>
     </ul>
   </div>
 </section>
@@ -197,9 +185,22 @@ footer{
   <div class="container">
     <h2 class="section-title">Projects</h2>
     <div class="grid">
-      <div class="card"><h3>HEALTHSYNC (2025)</h3><p>Cloud-based patient record management using Flask & Google Cloud.</p></div>
-      <div class="card"><h3>5G User Session Management (2025)</h3><p>Automated UE/gNB session control using Flask backend and nr-cli commands.</p></div>
-      <div class="card"><h3>Borewell Rescue System (2023)</h3><p>Balloon-assisted mechanism to safely extract children from borewells.</p></div>
+      <div class="card"><h3>HEALTHSYNC (2025)</h3><p>Cloud-based patient record system using Flask & Google Cloud.</p></div>
+      <div class="card"><h3>5G User Session Management (2025)</h3><p>Automated UE/gNB session control via Flask backend & nr-cli.</p></div>
+      <div class="card"><h3>Borewell Rescue System (2023)</h3><p>Balloon-assisted mechanism for safe borewell child extraction.</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- ===== INTERNSHIPS ===== -->
+<section id="internships" class="section">
+  <div class="container">
+    <h2 class="section-title">Internships</h2>
+    <div class="grid">
+      <div class="card"><h3>Infosys Springboard (2025)</h3><p>Built interactive Power BI dashboards for actionable insights.</p></div>
+      <div class="card"><h3>Elevate Labs (2025)</h3><p>Analyzed e-commerce data; identified return rate trends.</p></div>
+      <div class="card"><h3>Edunet Foundation – AICTE (2025)</h3><p>Applied AI & front-end in green tech projects.</p></div>
+      <div class="card"><h3>NIIT Foundation (2025)</h3><p>Cybersecurity & AI modules with practical networking exposure.</p></div>
     </div>
   </div>
 </section>
@@ -208,8 +209,8 @@ footer{
 <section id="education" class="section">
   <div class="container">
     <h2 class="section-title">Education</h2>
-    <p><strong>B.E. Computer Science & Engineering</strong> – Prince Shri Venkateshwara Padmavathy Engineering College, CGPA 8.21 (6th Sem)</p>
-    <p>Class 12 – Shrishti Vidyashram Sr. Sec. School, 72.2% (2022)</p>
+    <p><strong>B.E. Computer Science & Engineering</strong> – Prince Shri Venkateshwara Padmavathy Engineering College, CGPA 8.21 (6th Sem, 2022–2026)</p>
+    <p><strong>Class 12</strong> – Shrishti Vidyashram Sr. Sec. School, 72.2% (2022)</p>
   </div>
 </section>
 
@@ -219,9 +220,23 @@ footer{
     <h2 class="section-title">Certifications</h2>
     <ul>
       <li>NPTEL: Design Thinking, Research & Innovation</li>
-      <li>TCS: MasterCraft Data Plus, Career Edge</li>
-      <li>Forage: PwC Power BI, Tata Data Visualization, AWS APAC 2025</li>
+      <li>TCS: MasterCraft Data Plus, Career Edge, Master Data Management</li>
+      <li>Forage Virtual Internships: PwC Power BI, Tata Data Visualization, AWS APAC 2025, Deloitte Cyber 2025, Data Analytics 2025</li>
       <li>Oracle: OCI Generative AI 2025</li>
+      <li>Workshops: AR/VR Game Development, Ethical Hacking Training</li>
+      <li>Microsoft: OS & Security | Google: Foundations of Cybersecurity</li>
+      <li>DeepLearning.AI: Generative AI for Everyone</li>
+    </ul>
+  </div>
+</section>
+
+<!-- ===== ACHIEVEMENTS ===== -->
+<section id="achievements" class="section">
+  <div class="container">
+    <h2 class="section-title">Leadership & Achievements</h2>
+    <ul>
+      <li>Campus Ambassador – IIT Madras Mechanica 2025, IIT Guwahati Techniche 2025</li>
+      <li>Treasurer – Rotaract Club (2023–2024)</li>
     </ul>
   </div>
 </section>
@@ -232,6 +247,7 @@ footer{
     <h2 class="section-title">Contact</h2>
     <p>Email: <a href="mailto:krishnamoorthiraghul123@gmail.com">krishnamoorthiraghul123@gmail.com</a></p>
     <p>Phone: +91-8838168911</p>
+    <p>Location: Chennai, India</p>
   </div>
 </section>
 
